Add a form for creating a journal entry to the div[data-view=entry-form]. #1

--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
   <header>
   </header>
   <main>
+    <div data-view="entry-form">
+      <form action="">
+        <h1>New Entry</h1>
+        <div>Picture</div>
+        <div>
+          <label for="title">Title</label>
+          <input type="text" id="title" name="title">
+        </div>
+        <div>
+          <label for="photoURL">Photo URL</label>
+          <input type="text" id="photoURL" name="photoURL">
+        </div>
+        <div>
+          <label for="Notes">Notes</label>
+          <input type="text" id="notes" name="notes">
+        </div>
+        <input type="submit" name="submit" value="submit">
+      </form>
+    </div>
   </main>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
