Make all inputs of the journal entry form required #1

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
           <div class="column-half">
             <label for="title">Title</label>
             <div>
-              <input type="text" id="title" class="full-width">
+              <input type="text" id="title" class="full-width" required>
             </div>
             <label for="photoURL">Photo URL</label>
             <div>
-              <input type="text" id="photoURL" class="full-width">
+              <input type="text" id="photoURL" class="full-width" required>
             </div>
           </div>
         </div>
@@ -48,7 +48,7 @@
           <div class="column-full">
             <label for="Notes">Notes</label>
             <div>
-              <input type="text" id="notes" class="full-width larger-textbox">
+              <input type="text" id="notes" class="full-width larger-textbox" required>
             </div>
           </div>
         </div>
