Listen for 'submit' events on the journal entry form. #1

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <form action="">
         <div class="row">
           <div class="column-half">
-            <img src="images/placeholder-image-square.jpg" alt="">
+            <img src="images/placeholder-image-square.jpg" alt="Photo" id="image">
           </div>
           <div class="column-half">
             <label for="title">Title</label>
@@ -54,7 +54,7 @@
         </div>
         <div class="row">
           <div class="column-full align-right">
-            <button type="submit" value="Submit">Save</button>
+            <button type="submit" value="Submit" id="submit">Save</button>
           </div>
         </div>
       </form>
