Add a navigation item to the navbar for Entries. #2

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <body>
   <header class="row purple-bg">
     <div class="column-full">
-      <h2 class="white-text">Code Journal</h2>
+      <h2 class="white-text inline-block margin-right">Code Journal</h2>
+      <a href="entries" class="white-text inline-block margin-right"><h3>Entries</h3></a>
     </div>
   </header>
   <main>
