--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
   <header class="row purple-bg">
     <div class="column-full">
       <h2 class="white-text inline-block margin-right">Code Journal</h2>
-      <a href="entries" class="white-text inline-block margin-right"><h3>Entries</h3></a>
+      <a href="#entries" class="navEntries white-text inline-block margin-right"><h3>Entries</h3></a>
     </div>
   </header>
   <main>
-    <div class="row">
-      <div class="column-full">
-        <h1>New Entry</h1>
+    <div data-view="entry-form" id="entry-form">
+      <div class="row">
+        <div class="column-full">
+          <h1>New Entry</h1>
+        </div>
       </div>
-    </div>
-    <div data-view="entry-form">
       <form action="">
         <div class="row">
           <div class="column-half">
@@ -62,7 +62,7 @@
     </div>
 
     <!-- Entries  -->
-    <div data-view="entries">
+    <div data-view="entries" id="entries" class="hidden">
       <div class="container">
         <div class="row">
           <div class="column-full">
