Ensure that refreshing the pages shows the same view as before refreshing. #2

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 <body>
   <header class="row purple-bg">
     <div class="column-full">
-      <h2 class="white-text inline-block margin-right">Code Journal</h2>
+      <h2 class="navMain white-text inline-block margin-right">Code Journal</h2>
       <a href="#entries" class="navEntries white-text inline-block margin-right"><h3>Entries</h3></a>
     </div>
   </header>
   <main>
-    <div data-view="entry-form" id="entry-form">
+    <div data-view="entry-form" class="view" id="entry-form">
       <div class="row">
         <div class="column-full">
           <h1>New Entry</h1>
@@ -62,7 +62,7 @@
     </div>
 
     <!-- Entries  -->
-    <div data-view="entries" id="entries" class="hidden">
+    <div data-view="entries" id="entries" class="view hidden">
       <div class="container">
         <div class="row">
           <div class="column-full">
