Add a click target for deleting an entry to the entry form that only appears if the user is editing an entry. #4

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="column-full align-right">
+        <div class="row" id="save-row">
+          <div class="column-full align-right" id="submit-div">
             <button type="submit" value="Submit" id="submit">Save</button>
           </div>
         </div>
