Hide the modal if the user clicks Cancel. #4

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="row" id="save-row">
           <div class="column-half">
-            <a href="" class="delete-link hidden">Delete Entry</a>
+            <span class="delete-link hidden">Delete Entry</span>
           </div>
           <div class="column-half align-right" id="submit-div">
             <button type="submit" value="Submit" id="submit">Save</button>
