Show the Entries list if the user clicks Delete. #4

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
   </header>
   <main class="margins">
+    <!-- New Entry -->
     <div data-view="entry-form" class="view" id="entry-form">
       <div class="row">
         <div class="column-full">
@@ -64,7 +65,7 @@
       </form>
     </div>
 
-    <!-- Entries  -->
+    <!-- View Entries  -->
     <div data-view="entries" id="entries" class="view hidden">
       <div class="container">
         <div class="row">
@@ -76,7 +77,6 @@
         </ul>
       </div>
     </div>
-
   </main>
 
   <!-- Modal -->
